# My-Symbolic-Execution

./: README.md  easy_example  easy_example.c  vm_analysis.py
IDA-challenge/IDA-challenge-Ghidra.rep/: project.prp  projectState
IDA-challenge/free-madame-de-maintenon-challenge/: triton_solver.py  triton_solver_z3.py  tritondse_solver.py
Maat examples/: assert_solver.py  fifth_program.py  first_program.py  fourth_program.py  second_program.py  snapshots_1.py  third_program.py
crackme1/: README.md  crackme_solver_maat.py  crackme_solver_triton.py
crackmes.rep/: project.prp  projectState
crackmes.rep/idata/: ~index.bak
crackmes.rep/user/: ~journal.bak
fibonacci-VM/: vm_analysis_maat.py  vm_analysis_triton.py
obfcf_interp/: modexp  modexp.c
tigress-challenges-triton/: example.c  example.ll  triton-0000-0.py
tigress-challenges-triton/0000/: README.md  tigress-0000-0-expression  tigress-0000-0-expression.ll  tigress-0000-0-instructions.txt  tigress-0000-1-expression  tigress-0000-1-expression.ll  tigress-0000-1-instructions.txt  triton-0000-0.py  triton-0000-1.py
tigress-challenges/Linux-x86_64/: 0000.sh  0001.sh  0002.sh  0003.sh  (+3 more)
virtual.1/: crackme  keygen.py  main.ll  solve-vm.py  test.ll  virtual.1  virtual.1.bndb  virtual1_arch.py  vm_bytecode.bin.bndb
virtual.1/bagolymadar_lifter/: CMakeLists.txt
virtual.1/bagolymadar_lifter/include/: disassembler.hpp  lifter.hpp  optimizer.hpp  vm_defs.hpp
virtual.1/bagolymadar_lifter/src/: disassembler.cpp  lifter.cpp  main.cpp  optimizer.cpp
vm-challenge/: README.md  solver_triton.py  vm_ollvm_solver.py
(+33 files in other folders)
